tests/baselines/reference/genericTypeUsedWithoutTypeArguments1.errors.txt
==== tests/cases/compiler/genericTypeUsedWithoutTypeArguments1.ts (1 errors) ====
    interface Foo<T> { }
    class Bar<T> implements Foo { }
                            ~~~
!!! genericTypeUsedWithoutTypeArguments1.ts(2,25): error TS2090: Generic type 'Foo<T>' requires 1 type argument(s).
    